--- a/acre/acrelog/templates/secret-sauce.html
+++ b/acre/acrelog/templates/secret-sauce.html
@@ -12,10 +12,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark navbar-fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="">
-                        <img src="https://cdn-icons-png.flaticon.com/512/8628/8628564.png" width="30" height="30" alt="">
-                        ACRE LOG
-                    </a>
+                  <a class="navbar-brand" href="/acrelog">ACRE LOG</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
