--- a/acre/acrelog/templates/index.html
+++ b/acre/acrelog/templates/index.html
@@ -13,27 +13,30 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark navbar-fixed-top bg-dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="/acrelog">ACRE LOG</a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/acrelog">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="https://ag.purdue.edu/department/agry/acre/index.html">Purdue ACRE</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link disabled" href="/acrelog" tabindex="-1" aria-disabled="true">Disabled</a>
-                      </li>
-                    </ul>
-                    <form class="d-flex">
-                      <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" control-id="ControlID-1">
-                      <button class="btn btn-outline-success" type="submit" control-id="ControlID-2">Search</button>
-                    </form>
-                  </div>
+                    <a class="navbar-brand" href="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/8628/8628564.png" width="30" height="30" alt="">
+                        ACRE LOG
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/acrelog">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://ag.purdue.edu/department/agry/acre/index.html">Purdue ACRE</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" href="/acrelog" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                        </ul>
+                        <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" control-id="ControlID-1">
+                        <button class="btn btn-outline-success" type="submit" control-id="ControlID-2">Search</button>
+                        </form>
+                    </div>
                 </div>
               </nav>
         </header>
