--- a/acre/acrelog/templates/fields.html
+++ b/acre/acrelog/templates/fields.html
@@ -97,6 +97,38 @@
 
         </main>
 
+
+        <div class="container-fluid my-5">
+
+            <footer class="text-center text-lg-start" style="background-color: #06402b;">
+              <div class="container d-flex justify-content-center py-5">
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #96d9c0;">
+                  <i class="fab fa-facebook-f"></i>
+                </button>
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #96d9c0;">
+                  <i class="fab fa-youtube"></i>
+                </button>
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #96d9c0;">
+                  <i class="fab fa-instagram"></i>
+                </button>
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: #96d9c0;">
+                  <i class="fab fa-twitter"></i>
+                </button>
+              </div>
+          
+              <!-- Copyright -->
+              <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                © 2024 Copyright:
+                <a class="text-white" href="https://www.agry.purdue.edu/hydrology/personal_pages/Yang_Dongseok.html">DK Yang, Purdue Universtiy, ABE</a>
+                <br>
+                <a class="text-white" href="https://github.com/ag-informatics/ag-informatics-course/tree/main/module5/lab5">Last update : 2024-11-07</a>
+
+              </div>
+              <!-- Copyright -->
+            </footer>
+            
+          </div>
+
     </body>
 
 </html>
