--- a/acre/acrelog/templates/fields.html
+++ b/acre/acrelog/templates/fields.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
         <title>Acrelog App</title>
     </head>
 
@@ -12,7 +15,7 @@
         <header>
             <nav class="navbar navbar-expand-md navbar-dark navbar-fixed-top bg-dark">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="">
+                    <a class="navbar-brand" href="../">
                         <img src="https://cdn-icons-png.flaticon.com/512/8628/8628564.png" width="30" height="30" alt="">
                         ACRE LOG
                     </a>
@@ -47,26 +50,37 @@
         <main class="mt-5 container">
             <div class="mt-5 container-fluid">
                 
-                <div class="container-fluid bg-secondary text-white">
-                    <h3>Operation Code</h3>
-                </div>
-                
-                <table class="table">
-                    <tr>
-                        <th>1</th>
-                        <th>2</th>
-                        <th>3</th>
-                        <th>4</th>
-                        <th>5</th>
-                    </tr>
-                    <tr>
-                        <td> Spread/Spray </td>
-                        <td> Tillage </td>
-                        <td> Planting </td>
-                        <td> Harvest </td>
-                        <td> Soil Sampling </td>
-                    </tr>
-                </table>
+                <p class="d-inline-flex gap-1">
+                    <a class="btn btn-secondary collapsed" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                      Operation Code
+                    </a>
+                  </p>
+                  <div class="collapse" id="collapseExample" style="">
+                    <div class="card card-body">
+                        <div class="container-fluid bg-secondary text-white">
+                            <h3>Operation Code</h3>
+                        </div>
+                        
+                        <table class="table">
+                            <tr>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                                <th>4</th>
+                                <th>5</th>
+                            </tr>
+                            <tr>
+                                <td> Spread/Spray </td>
+                                <td> Tillage </td>
+                                <td> Planting </td>
+                                <td> Harvest </td>
+                                <td> Soil Sampling </td>
+                            </tr>
+                        </table>
+                    </div>
+                  </div>
+
+
 
                 <div class="mt-5 container-fluid bg-secondary text-white">
                     <h3>List</h3>
